--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.7.2",
     "decode": "^0.3.0",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1"
